--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Русская справка
+Р СѓСЃСЃРєР°СЏ СЃРїСЂР°РІРєР°
 --------------
-Модуль "static-files" предназначен для автоматического развертывания статичных файлов модулей и тем оформления проекта
+РњРѕРґСѓР»СЊ "static-files" РїСЂРµРґРЅР°Р·РЅР°С‡РµРЅ РґР»СЏ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРѕРіРѕ СЂР°Р·РІРµСЂС‚С‹РІР°РЅРёСЏ СЃС‚Р°С‚РёС‡РЅС‹С… С„Р°Р№Р»РѕРІ РјРѕРґСѓР»РµР№ Рё С‚РµРј РѕС„РѕСЂРјР»РµРЅРёСЏ РїСЂРѕРµРєС‚Р°
