Залил модуль (версия 0.1)

--- a/README
+++ b/README
@@ -1,3 +1,2 @@
-Русская справка
---------------
-Модуль "static-files" предназначен для автоматического развертывания статичных файлов модулей и тем оформления проекта
+Описание работы модуля тут:
+http://habrahabr.ru/blogs/kohanaphp/112852/
